<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_24"
        tools:context=".ui.play.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintPlay"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageSong"
                android:layout_width="@dimen/dp_250"
                android:layout_height="@dimen/dp_250"
                android:contentDescription="@string/title_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textSongName"
                style="@style/textStyle"
                android:layout_width="@dimen/dp_0"
                android:layout_margin="@dimen/dp_24"
                android:gravity="center"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSong" />

            <TextView
                android:id="@+id/textDuration"
                style="@style/textStyle"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/title_seek"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/seekBarSong"
                app:layout_constraintTop_toBottomOf="@+id/textSongName" />

            <SeekBar
                android:id="@+id/seekBarSong"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_40"
                app:layout_constraintLeft_toRightOf="@+id/textDuration"
                app:layout_constraintRight_toLeftOf="@+id/textMax"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSongName" />

            <TextView
                android:id="@+id/textMax"
                style="@style/textStyle"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_40"
                android:text="@string/title_seek"
                app:layout_constraintLeft_toRightOf="@+id/seekBarSong"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSongName" />

            <ImageButton
                android:id="@+id/buttonPrev"
                style="@style/styleImageButton"
                android:layout_marginStart="@dimen/dp_50"
                android:layout_marginLeft="@dimen/dp_50"
                android:background="@null"
                android:contentDescription="@string/title_prev"
                android:src="@drawable/ic_prev"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonPlay"
                style="@style/styleImageButton"
                android:background="@null"
                android:contentDescription="@string/title_play"
                android:src="@drawable/ic_pause"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonNext"
                style="@style/styleImageButton"
                android:layout_marginEnd="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_50"
                android:background="@null"
                android:contentDescription="@string/title_next"
                android:src="@drawable/ic_next"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerListSong"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_24"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintPlay" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
